[gd_scene load_steps=8 format=2]

[ext_resource path="res://data/SingleAct/SendEximMail.gd" type="Script" id=1]
[ext_resource path="res://data/SingleAct/SC_custom_manager.gd" type="Script" id=2]
[ext_resource path="res://SingleAct.gd" type="Script" id=3]
[ext_resource path="res://data/SingleAct/MiniRanchat.gd" type="Script" id=5]
[ext_resource path="res://default.tres" type="Theme" id=6]
[ext_resource path="res://data/SingleAct/SC_GuestBook.gd" type="Script" id=7]
[ext_resource path="res://SC1_custom.gd" type="Script" id=8]

[node name="SingleAct" type="Node"]
script = ExtResource( 3 )

[node name="SC1_custom" type="Node" parent="."]
script = ExtResource( 8 )

[node name="SC_custom_manager" type="Node" parent="SC1_custom"]
script = ExtResource( 2 )

[node name="GuestBook" type="Node" parent="SC1_custom/SC_custom_manager"]
script = ExtResource( 7 )

[node name="MiniRanchat" type="Node" parent="."]
script = ExtResource( 5 )

[node name="SendExim4Mail" type="Node" parent="."]
script = ExtResource( 1 )

[node name="m" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="vbox" type="VBoxContainer" parent="m"]
margin_left = 8.0
margin_top = 8.0
margin_right = 352.0
margin_bottom = 352.0

[node name="GridContainer" type="GridContainer" parent="m/vbox"]
margin_right = 344.0
margin_bottom = 132.0
columns = 4

[node name="#" type="ColorRect" parent="m/vbox/GridContainer"]
margin_right = 83.0
margin_bottom = 30.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="#" type="Label" parent="m/vbox/GridContainer/#"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "#"
align = 1
valign = 1

[node name="Title_0" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 87.0
margin_right = 170.0
margin_bottom = 30.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.211765, 0.211765, 0.211765, 1 )

[node name="Title" type="Label" parent="m/vbox/GridContainer/Title_0"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "현재동접"
align = 1
valign = 1

[node name="Title_1" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 174.0
margin_right = 257.0
margin_bottom = 30.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.211765, 0.211765, 0.211765, 1 )

[node name="Title" type="Label" parent="m/vbox/GridContainer/Title_1"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "동시최대"
align = 1
valign = 1

[node name="Title_2" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 261.0
margin_right = 344.0
margin_bottom = 30.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.211765, 0.211765, 0.211765, 1 )

[node name="Title" type="Label" parent="m/vbox/GridContainer/Title_2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "누적"
align = 1
valign = 1

[node name="#2" type="ColorRect" parent="m/vbox/GridContainer"]
margin_top = 34.0
margin_right = 83.0
margin_bottom = 64.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="#" type="Label" parent="m/vbox/GridContainer/#2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "Counter"
align = 1
valign = 1

[node name="Current_0" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 87.0
margin_top = 34.0
margin_right = 170.0
margin_bottom = 64.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Current_0" type="Label" parent="m/vbox/GridContainer/Current_0"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Maximum_0" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 174.0
margin_top = 34.0
margin_right = 257.0
margin_bottom = 64.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Maximum_0" type="Label" parent="m/vbox/GridContainer/Maximum_0"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Stack_0" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 261.0
margin_top = 34.0
margin_right = 344.0
margin_bottom = 64.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Stack_0" type="Label" parent="m/vbox/GridContainer/Stack_0"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="#3" type="ColorRect" parent="m/vbox/GridContainer"]
margin_top = 68.0
margin_right = 83.0
margin_bottom = 98.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="#" type="Label" parent="m/vbox/GridContainer/#3"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "SC1_cus"
align = 1
valign = 1

[node name="Current_1" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 87.0
margin_top = 68.0
margin_right = 170.0
margin_bottom = 98.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Current_0" type="Label" parent="m/vbox/GridContainer/Current_1"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Maximum_1" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 174.0
margin_top = 68.0
margin_right = 257.0
margin_bottom = 98.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Maximum_0" type="Label" parent="m/vbox/GridContainer/Maximum_1"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Stack_1" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 261.0
margin_top = 68.0
margin_right = 344.0
margin_bottom = 98.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Stack_0" type="Label" parent="m/vbox/GridContainer/Stack_1"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="#4" type="ColorRect" parent="m/vbox/GridContainer"]
margin_top = 102.0
margin_right = 83.0
margin_bottom = 132.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="#" type="Label" parent="m/vbox/GridContainer/#4"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "Minichat"
align = 1
valign = 1

[node name="Current_2" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 87.0
margin_top = 102.0
margin_right = 170.0
margin_bottom = 132.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Current_0" type="Label" parent="m/vbox/GridContainer/Current_2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Maximum_2" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 174.0
margin_top = 102.0
margin_right = 257.0
margin_bottom = 132.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Maximum_0" type="Label" parent="m/vbox/GridContainer/Maximum_2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Stack_2" type="ColorRect" parent="m/vbox/GridContainer"]
margin_left = 261.0
margin_top = 102.0
margin_right = 344.0
margin_bottom = 132.0
rect_min_size = Vector2( 83, 30 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Stack_0" type="Label" parent="m/vbox/GridContainer/Stack_2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1

[node name="AdminInfo" type="HBoxContainer" parent="m/vbox"]
margin_top = 136.0
margin_right = 344.0
margin_bottom = 170.0
custom_constants/separation = 8

[node name="IsAdmin" type="Label" parent="m/vbox/AdminInfo"]
margin_top = 5.0
margin_right = 61.0
margin_bottom = 29.0
theme = ExtResource( 6 )
text = "관리자ID"

[node name="TargetUUID" type="LineEdit" parent="m/vbox/AdminInfo"]
margin_left = 69.0
margin_right = 344.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
placeholder_text = "00000000-0000-0000-0000-000000000000"

[node name="SendAllNotiImg" type="HBoxContainer" parent="m/vbox"]
margin_top = 174.0
margin_right = 344.0
margin_bottom = 208.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="m/vbox/SendAllNotiImg"]
margin_top = 5.0
margin_right = 75.0
margin_bottom = 29.0
theme = ExtResource( 6 )
text = "알림이미지"

[node name="AllNotiURL" type="LineEdit" parent="m/vbox/SendAllNotiImg"]
margin_left = 83.0
margin_right = 344.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
placeholder_text = "이미지 링크"

[node name="SendAllNoti" type="HBoxContainer" parent="m/vbox"]
margin_top = 212.0
margin_right = 344.0
margin_bottom = 246.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="m/vbox/SendAllNoti"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 29.0
theme = ExtResource( 6 )
text = "전체알림"

[node name="AllNotiText" type="LineEdit" parent="m/vbox/SendAllNoti"]
margin_left = 68.0
margin_right = 294.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
placeholder_text = "전체 알림 내용 작성"

[node name="Button" type="Button" parent="m/vbox/SendAllNoti"]
margin_left = 302.0
margin_right = 344.0
margin_bottom = 34.0
theme = ExtResource( 6 )
text = "발송"

[node name="c" type="ColorRect" parent="m/vbox"]
margin_top = 250.0
margin_right = 344.0
margin_bottom = 344.0
size_flags_vertical = 3
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="m" type="MarginContainer" parent="m/vbox/c"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="log" type="RichTextLabel" parent="m/vbox/c/m"]
margin_left = 8.0
margin_top = 8.0
margin_right = 336.0
margin_bottom = 86.0
theme = ExtResource( 6 )
bbcode_enabled = true
scroll_following = true

[node name="bgColor" type="ColorRect" parent="m/vbox/c"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -108.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 46.0
color = Color( 1, 0, 0, 0.431373 )

[node name="Label" type="Label" parent="m/vbox/c/bgColor"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "업데이트됨"
align = 1
valign = 1

[connection signal="text_changed" from="m/vbox/AdminInfo/TargetUUID" to="." method="_on_TargetUUID_text_changed"]
[connection signal="pressed" from="m/vbox/SendAllNoti/Button" to="." method="_on_Button_pressed"]
